--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Micah Cowell</title>
+	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css" />
+	<link rel="stylesheet" href="main.css" />
 </head>
 <body>
 	<div id="app"></div>
