--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Micah Cowell</title>
+	<link rel="shortcut icon" href="">
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css" />
 	<link rel="stylesheet" href="main.css" />
 </head>
