--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<title>Micah Cowell</title>
 	<link rel="shortcut icon" href="">
-	<link rel="stylesheet" href="main.css" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" />
+	<link rel="stylesheet" href="dist/css/main.css" />
 </head>
 <body>
 	<div id="app"></div>
-	<script src="bundle.js"></script>
+	<script src="dist/js/bundle.js"></script>
 </body>
 </html>
