--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script src="/dist/js/bundle.js"></script>
+	<script src="/dist/js/bundle.min.js"></script>
 </body>
 </html>
