--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Micah Cowell</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="shortcut icon" href="">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" />
 	<link rel="stylesheet" href="dist/css/main.css" />
